# scpn-phase-orchestrator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .zenodo.json  404.html  ARCHITECTURE.md  CAPABILITIES_AND_USECASES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  VALIDATION.md  _typos.toml  bandit_results.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.anulum/: project-card.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ASSUMPTIONS/: index.html
FACT_BASED_OVERVIEW/: index.html
RELEASE_HYGIENE/: index.html
SAFETY_ANALYSIS/: index.html
VALIDATION_REPORT/: index.html
VALIDATION_STUDY_PROTOCOL/: index.html
_generated/: capability_manifest.json
architecture/: index.html  manifest.json
architecture_decisions/: index.html
architecture_product_boundaries/: index.html
bench/: COMPETITIVE_ANALYSIS.md  README.md  ablation_harness.py  analytic_phase_pipeline.py  auditor_detector_head_to_head.py  baseline.json  bench_augmented.py  bench_e2e_advanced.py  bench_stuart_landau.py  cap_kuramoto_diagnostic.py  cap_kuramoto_variants.py  cap_multichannel_n3_vs_wake.py  chbmit_crosssubject_validation.py  chbmit_multichannel_kuramoto.py  chbmit_topk_plv_diagnostic.py  compare_baseline.py  competitive_kuramoto.py  competitor_ar1_kendall.py  critical_slowing_down_variants.py  csd_bifurcation_external_validation.py  detector_meta_analysis.py  dnb_detector.py  dnb_modal_transfer.py  domain_detectors.py  early_warning_dnb.py  early_warning_dnb_bulk.py  early_warning_domain.py  early_warning_leadtime.py  early_warning_leadtime_cardiac.py  early_warning_leadtime_climate.py  early_warning_leadtime_eeg.py  early_warning_leadtime_grid.py  early_warning_single_series.py  grid_advisory_example.py  grid_eigenvalue_external_validation.py  grid_modal_head_to_head.py  grid_modal_stream.py  grid_modal_stream_operating_point.py  grid_oscillation_detector.py  head_to_head_ar1_kendall.py  (+12 more)
benchmarks/: attnres_modulation_benchmark.py  basin_stability_benchmark.py  chimera_benchmark.py  delay_benchmark.py  delayed_benchmark.py  dimension_benchmark.py  embedding_benchmark.py  engine_comparison.py  entropy_prod_benchmark.py  envelope_benchmark.py  geometric_benchmark.py  hodge_benchmark.py  hypergraph_benchmark.py  inertial_benchmark.py  itpc_benchmark.py  koopman_edmd_benchmark.py  koopman_mpc_benchmark.py  lyapunov_benchmark.py  market_benchmark.py  merge_window_benchmark.py  npe_benchmark.py  opt_entropy_benchmark.py  orchestration_uplift_benchmark.py  order_params_benchmark.py  pac_benchmark.py  pha_c_acceptance_benchmark.py  pha_c_handoff_benchmark.py  pha_c_timeline_benchmark.py  pid_benchmark.py  poincare_benchmark.py  psychedelic_benchmark.py  recurrence_benchmark.py  reduction_benchmark.py  reference_suite.py  scaling_benchmark.py  scaling_results.json  simplicial_benchmark.py  sl_benchmark.py  sparse_benchmark.py  spatial_modulator_benchmark.py  (+10 more)
competitive_analysis/: index.html
competitive_comparison/: index.html
demo/: index.html
deploy/: docker-compose.yml  prometheus.yml
docker/: Dockerfile.queuewaves  docker-compose.queuewaves.yml  prometheus.yml
docs/: ASSUMPTIONS.md  FACT_BASED_OVERVIEW.md  RELEASE_HYGIENE.md  SAFETY_ANALYSIS.md  VALIDATION_REPORT.md  VALIDATION_STUDY_PROTOCOL.md  architecture_decisions.md  architecture_product_boundaries.md  competitive_analysis.md  competitive_comparison.md  faq.md  index.md  module_size_policy.md  pricing.md  references.bib  roadmap.md  video_scripts.md
examples/: agent_coordination.py  audit_replay_demo.py  cardiac_rhythm.py  cross_domain_universality.py  eeg_file_ingestion.py  epidemic_sir.py  failure_recovery.py  hodge_decomposition.py  imprint_memory.py  inverse_coupling_demo.py  inverse_kuramoto.py  market_regime_detection.py  multi_engine_comparison.py  neuroscience_eeg.py  (+15 more)
spo-kernel/: Cargo.toml  deny.toml  rustfmt.toml
spo-kernel/crates/spo-engine/: Cargo.toml
spo-kernel/crates/spo-engine/benches/: monitors_bench.rs  parallel_bench.rs  twin_confidence_bench.rs  upde_bench.rs  utility_bench.rs
spo-kernel/crates/spo-engine/src/: attnres.rs  basin_stability.rs  bifurcation.rs  carrier.rs  chimera.rs  connectome.rs  coupling.rs  coupling_est.rs  delay.rs  dimension.rs  dp_tableau.rs  ei_balance.rs  embedding.rs  entropy_prod.rs  envelope.rs  ethical.rs  evs.rs  free_energy.rs  freq_id.rs  geometric.rs  hodge.rs  hypergraph.rs  imprint.rs  inertial.rs  itpc.rs  koopman_edmd.rs  lags.rs  lib.rs  lif_ensemble.rs  lyapunov.rs  market.rs  merge_window.rs  npe.rs  opt_entropy.rs  order_params.rs  pac.rs  phase_extract.rs  pid.rs  plasticity.rs  poincare.rs  (+19 more)
spo-kernel/crates/spo-engine/src/coupling/: spatial_modulator.rs
spo-kernel/crates/spo-engine/tests/: proptests.rs  rk45_tests.rs
spo-kernel/crates/spo-ffi/: Cargo.toml  pyproject.toml
spo-kernel/crates/spo-ffi/src/: lib.rs
spo-kernel/crates/spo-fpga/: README.md
spo-kernel/crates/spo-fpga/src/: kuramoto_core.v
spo-kernel/crates/spo-oscillators/: Cargo.toml
spo-kernel/crates/spo-oscillators/src/: informational.rs  lib.rs  physical.rs  quality.rs  symbolic.rs
spo-kernel/crates/spo-supervisor/: Cargo.toml
spo-kernel/crates/spo-supervisor/src/: active_inference.rs  boundaries.rs  coherence.rs  events.rs  formal_safety.rs  lib.rs  petri_net.rs  policy.rs  projector.rs  regime.rs  rule_engine.rs
spo-kernel/crates/spo-types/: Cargo.toml
spo-kernel/crates/spo-types/src/: action.rs  config.rs  error.rs  lib.rs  state.rs
spo-kernel/crates/spo-wasm/: Cargo.toml  README.md
spo-kernel/crates/spo-wasm/example/: index.html  simulation.mjs  simulation.test.mjs
spo-kernel/crates/spo-wasm/src/: lib.rs
spo-kernel/kani/: README.md
spo-kernel/kani/proofs/: action_projector.rs
(+3128 files in other folders)
