# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Phase Orchestrator — Build Configuration

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-phase-orchestrator"
version = "0.5.0"
description = "Domain-agnostic coherence control compiler built on SCPN's Kuramoto/UPDE framework"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Miroslav Sotek", email = "protoscience@anulum.li" },
]
keywords = ["kuramoto", "phase-dynamics", "coherence-control", "UPDE", "synchrony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
rust = ["spo-kernel>=0.2.0"]
quantum = ["scpn-quantum-control>=0.1.0"]
plasma = ["scpn-control>=0.1.0"]
fusion = ["scpn-fusion-core>=3.9.0"]
scpn-all = [
    "spo-kernel>=0.2.0",
    "scpn-quantum-control>=0.1.0",
    "scpn-control>=0.1.0",
    "scpn-fusion-core>=3.9.0",
]
queuewaves = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "websockets>=12.0",
]
nn = ["jax>=0.4", "equinox>=0.11", "optax>=0.2"]
nengo = []  # pure-numpy LIF engine, no external deps
lava = ["lava-nc>=0.9"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
plot = ["matplotlib>=3.7"]
notebook = ["jupyter>=1.0", "nbconvert>=7.0", "matplotlib>=3.7"]
full = [
    "neurolib>=0.6",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.0",
    "pymodbus>=3.5",
    "jax>=0.4",
    "diffrax>=0.5",
    "rtamt>=0.3",
    "ripser>=0.6",
]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.1,<8.0",
    "hypothesis>=6.82,<7.0",
    "coverage[toml]>=7.3,<8.0",
    "ruff==0.15.8",
    "mypy>=1.19.1,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "bandit==1.9.4",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<1.0",
    "pymdown-extensions>=10.0,<11.0",
    "pygments>=2.16,<2.21",  # 2.20 breaks pymdownx highlight (filename=None)
    "pre-commit>=3.5,<5.0",
    "twine>=5.0,<6.0",
    "pytest-benchmark>=5.0,<6.0",
]

[project.scripts]
spo = "scpn_phase_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/anulum/scpn-phase-orchestrator"
Repository = "https://github.com/anulum/scpn-phase-orchestrator"
Issues = "https://github.com/anulum/scpn-phase-orchestrator/issues"
Documentation = "https://anulum.github.io/scpn-phase-orchestrator/"
Changelog = "https://github.com/anulum/scpn-phase-orchestrator/blob/main/CHANGELOG.md"
Discussions = "https://github.com/anulum/scpn-phase-orchestrator/discussions"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scpn_phase_orchestrator = ["py.typed", "apps/queuewaves/static/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/scpn_phase_orchestrator/grpc_gen/spo_pb2.py", "src/scpn_phase_orchestrator/grpc_gen/spo_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "S", "C4", "RET", "PTH"]
ignore = ["S101", "S104", "S310", "S603", "N802", "N803", "N806", "N815", "N816"]

[tool.ruff.lint.per-file-ignores]
"tools/kaggle_*.py" = ["S607", "PTH110", "PTH112", "PTH208"]
"tests/test_exceptions.py" = ["S301"]  # pickle round-trip is the test subject
"tests/test_kuramoto_layer.py" = ["E402"]
"tests/test_stuart_landau_nn.py" = ["E402"]
"tests/test_bold.py" = ["E402"]
"tests/test_reservoir.py" = ["E402"]
"tests/test_ude_kuramoto.py" = ["E402"]
"tests/test_inverse.py" = ["E402"]
"tests/test_oim.py" = ["E402"]
"tests/test_simplicial_layer.py" = ["E402"]
"tests/test_sparse_coupling.py" = ["E402"]
"tests/test_training.py" = ["E402"]
"tests/test_theta_neuron.py" = ["E402"]
"tests/test_winfree.py" = ["E402"]
"tests/test_nn_spectral.py" = ["E402"]
"tests/test_nn_chimera.py" = ["E402"]

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["scpn_phase_orchestrator.grpc_gen.spo_pb2", "scpn_phase_orchestrator.grpc_gen.spo_pb2_grpc"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "scpn_phase_orchestrator.adapters.modbus_tls",
    "scpn_phase_orchestrator.adapters.hardware_io",
    "scpn_phase_orchestrator.adapters.redis_store",
    "scpn_phase_orchestrator.adapters.opentelemetry",
    "scpn_phase_orchestrator.adapters.neurocore_bridge",
    "scpn_phase_orchestrator.adapters.quantum_control_bridge",
    "scpn_phase_orchestrator.adapters.lsl_bci_bridge",
    "scpn_phase_orchestrator.adapters.gaian_mesh_bridge",
    "scpn_phase_orchestrator.autotune.sindy",
    "scpn_phase_orchestrator.visualization.streamer",
    "scpn_phase_orchestrator.coupling.connectome",
    "scpn_phase_orchestrator.coupling.knm",
    "scpn_phase_orchestrator.oscillators.physical",
    "scpn_phase_orchestrator.upde.prediction",
    "scpn_phase_orchestrator.upde.engine",
    "scpn_phase_orchestrator.upde.pac",
    "scpn_phase_orchestrator.upde.stuart_landau",
    "scpn_phase_orchestrator.upde.order_params",
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "spo_kernel",
    "spo_kernel.*",
    "redis",
    "redis.*",
    "opentelemetry",
    "opentelemetry.*",
    "sc_neurocore",
    "sc_neurocore.*",
    "scpn_quantum_control",
    "scpn_quantum_control.*",
    "optax",
    "optax.*",
    "pylsl",
    "pylsl.*",
    "websockets",
    "websockets.*",
    "rtamt",
    "rtamt.*",
    "ripser",
    "ripser.*",
    "neurolib",
    "neurolib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scpn_phase_orchestrator.nn.*"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
xfail_strict = true
filterwarnings = ["error::DeprecationWarning"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end integration tests",
    "contract: boundary-contract verification tests",
    "slow: long-running stress/scale tests (N>1000 or T>10000)",
]

[tool.coverage.run]
source = ["scpn_phase_orchestrator"]
concurrency = ["thread"]
omit = [
    "*/grpc_gen/*",
    # External-dependency adapters: require packages not in standard CI
    # (Redis, Modbus, BrainFlow, neurolib, scpn-fusion-core, sc-neurocore,
    # scpn-control, rtamt/Python 3.11 only).
    "*/adapters/hardware_io.py",
    "*/adapters/modbus_tls.py",
    "*/adapters/redis_store.py",
    "*/adapters/prometheus.py",
    "*/adapters/snn_bridge.py",
    "*/adapters/fusion_core_bridge.py",
    "*/adapters/neurocore_bridge.py",
    "*/adapters/plasma_control_bridge.py",
    "*/adapters/metrics_exporter.py",
    "*/monitor/stl.py",
    # JAX/equinox not in standard CI
    "*/nn/*",
]

[tool.coverage.report]
fail_under = 95

[tool.bandit]
exclude_dirs = ["tests"]
