# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Phase Orchestrator — Build Configuration

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-phase-orchestrator"
version = "0.10.0"
description = "Domain-agnostic coherence control compiler built on SCPN's Kuramoto/UPDE framework"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Miroslav Sotek", email = "protoscience@anulum.li" },
]
keywords = ["kuramoto", "phase-dynamics", "coherence-control", "UPDE", "synchrony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "protobuf>=6.33.5,<8.0",
    "urllib3>=2.7,<3.0",
]

[project.optional-dependencies]
rust = ["spo-kernel>=0.2.0"]
quantum = ["scpn-quantum-control>=0.1.0"]
plasma = ["scpn-control>=0.1.0"]
fusion = ["scpn-fusion-core>=3.9.0"]
scpn-all = [
    "spo-kernel>=0.2.0",
    "scpn-quantum-control>=0.1.0",
    "scpn-control>=0.1.0",
    "scpn-fusion-core>=3.9.0",
]
queuewaves = [
    "fastapi>=0.136.1,<1.0",
    "starlette>=1.3.1,<2.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
    "websockets>=12.0,<17.0",
]
studio = ["streamlit>=1.36,<2.0", "scpn-studio-platform>=0.3,<0.4"]
nn = ["jax>=0.4,<1.0", "equinox>=0.11,<1.0", "optax>=0.2,<1.0"]
mpc = ["osqp>=1.0,<2.0"]
nengo = []  # pure-numpy LIF engine, no external deps
lava = []  # external Lava runtime is operator-managed; lava-nc pins vulnerable asteval
otel = ["opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0"]
opcua = ["asyncua>=1.0,<3.0"]
mqtt = ["paho-mqtt>=2.0,<3.0"]
pqc = ["cryptography>=49,<50"]  # ML-DSA (FIPS 204) audit-chain seal
plot = ["matplotlib>=3.7,<4.0"]
julia = ["juliacall>=0.9,<0.10"]
notebook = [
    "jupyter>=1.0,<2.0",
    "jupyterlab>=4.5.9,<5.0",
    "notebook>=7.5.6,<8.0",
    "nbconvert>=7.0,<8.0",
    "matplotlib>=3.7,<4.0",
    # Security floors for the transitive Jupyter stack (dev/notebook scope only).
    "jupyter-server>=2.20.0",
    "tornado>=6.5.7",
    "bleach>=6.4.0",
]
full = [
    "neurolib>=0.6,<1.0",
    "grpcio>=1.60,<2.0",
    "grpcio-tools>=1.60,<2.0",
    "pymodbus>=3.5,<4.0",
    "asyncua>=1.0,<3.0",
    "paho-mqtt>=2.0,<3.0",
    "jax>=0.4,<1.0",
    "diffrax>=0.5,<1.0",
    "rtamt>=0.3,<1.0",
    "ripser>=0.6,<1.0",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.1,<8.0",
    "hypothesis>=6.82,<7.0",
    "interrogate==1.7.0",
    "fastapi>=0.136.1,<1.0",
    "starlette>=1.3.1,<2.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
    "websockets>=12.0,<17.0",
    "coverage[toml]>=7.3,<8.0",
    "ruff==0.15.18",
    "mypy>=1.19.1,<3.0",
    "types-protobuf>=6.30,<8.0",
    "types-PyYAML>=6.0,<7.0",
    "bandit==1.9.4",
    "mistune>=3.2.1",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<2.0",
    "pymdown-extensions>=10.21.3,<11.0",
    "pygments>=2.20,<2.21",
    "pre-commit>=3.5,<5.0",
    "twine>=6.2,<7.0",
    "pytest-benchmark>=5.0,<6.0",
    "msgpack>=1.2.1",  # security floor (dev/test transitive)
]

[project.scripts]
spo = "scpn_phase_orchestrator.runtime.cli:main"
scpn-meta = "scpn_phase_orchestrator.runtime.cli:meta_transfer_manifest"

[project.urls]
Homepage = "https://github.com/anulum/scpn-phase-orchestrator"
Repository = "https://github.com/anulum/scpn-phase-orchestrator"
Issues = "https://github.com/anulum/scpn-phase-orchestrator/issues"
Documentation = "https://anulum.github.io/scpn-phase-orchestrator/"
Changelog = "https://github.com/anulum/scpn-phase-orchestrator/blob/main/CHANGELOG.md"
Discussions = "https://github.com/anulum/scpn-phase-orchestrator/discussions"

[tool.uv]
exclude-dependencies = ["scpn-fusion-core", "spo-kernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scpn_phase_orchestrator = ["py.typed", "apps/queuewaves/static/*", "audit/*.proto", "runtime/cli/_quickstart_assets/*/*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/scpn_phase_orchestrator/runtime/grpc_gen/spo_pb2.py", "src/scpn_phase_orchestrator/runtime/grpc_gen/spo_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "S", "C4", "RET", "PTH", "D"]
# D105 (magic-method docstrings) is disabled: dunder behaviour is defined by
# protocol, and forcing a docstring on every __repr__/__eq__/__hash__ invites
# generic-filler text rather than documenting intent.
ignore = ["S101", "N802", "N803", "N806", "N815", "N816", "D105"]

[tool.ruff.lint.per-file-ignores]
"experiments/seizure_detection_chbmit.py" = ["S310"]
"src/scpn_phase_orchestrator/adapters/prometheus.py" = ["S310"]
"src/scpn_phase_orchestrator/adapters/remanentia_bridge.py" = ["S310"]
"src/scpn_phase_orchestrator/experimental/accelerators/**/*_mojo.py" = ["S603"]
"src/scpn_phase_orchestrator/coupling/_*_mojo.py" = ["S603"]
"src/scpn_phase_orchestrator/monitor/_*_mojo.py" = ["S603"]
"src/scpn_phase_orchestrator/scaffold/llm.py" = ["S310"]
"src/scpn_phase_orchestrator/upde/_*_mojo.py" = ["S603"]
# NumPy-convention docstrings (D) are required of the public library surface
# under src/. Non-library trees — tests, runnable scripts, vertical packs,
# fuzz harnesses, examples, and notebooks — are exempt from the docstring gate.
"tools/kaggle_*.py" = ["S607", "PTH110", "PTH112", "PTH208", "D"]
"tools/*.py" = ["S603", "D"]
"tools/**/*.py" = ["D"]
"benchmarks/**/*.py" = ["D"]
"experiments/**/*.py" = ["D"]
"domainpacks/**/*.py" = ["D"]
"fuzzers/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]
"notebooks/**/*.py" = ["D"]
"notebooks/**/*.ipynb" = ["D"]
"platform/**/*.py" = ["D"]
"bench/**/*.py" = ["D"]
"tests/**/*.py" = ["S104", "S603", "D"]
"tests/*.py" = ["S104", "S603", "D"]
"tests/test_exceptions.py" = ["S301"]  # pickle round-trip is the test subject
"tests/test_kuramoto_layer.py" = ["E402"]
"tests/test_stuart_landau_nn.py" = ["E402"]
"tests/test_bold.py" = ["E402"]
"tests/test_reservoir.py" = ["E402"]
"tests/test_ude_kuramoto.py" = ["E402"]
"tests/test_inverse.py" = ["E402"]
"tests/test_oim.py" = ["E402"]
"tests/test_simplicial_layer.py" = ["E402"]
"tests/test_sparse_coupling.py" = ["E402"]
"tests/test_training.py" = ["E402"]
"tests/test_theta_neuron.py" = ["E402"]
"tests/test_winfree.py" = ["E402"]
"tests/test_nn_spectral.py" = ["E402"]
"tests/test_nn_chimera.py" = ["E402"]
"tests/test_nn_functional.py" = ["E402"]
"tests/test_nn_supervisor.py" = ["E402"]
"tests/test_supervisor_candidate_bridge.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["scpn_phase_orchestrator.runtime.grpc_gen.spo_pb2", "scpn_phase_orchestrator.runtime.grpc_gen.spo_pb2_grpc"]
ignore_errors = true

# Conditional optional-dependency and cross-platform import shims carry
# ``# type: ignore`` comments that are unused in the standard environment but
# required when the optional backend (Redis, Modbus, pymodbus, LSL, neurocore,
# quantum-control, gaian-mesh) or platform is installed. ``strict`` would flag
# these as unused-ignore in this environment, so the check is relaxed only for
# these modules; every other strict flag still applies.
[[tool.mypy.overrides]]
module = [
    "scpn_phase_orchestrator.adapters.modbus_tls",
    "scpn_phase_orchestrator.adapters.hardware_io",
    "scpn_phase_orchestrator.adapters.redis_store",
    "scpn_phase_orchestrator.adapters.opentelemetry",
    "scpn_phase_orchestrator.runtime.observability",
    "scpn_phase_orchestrator.adapters.neurocore_bridge",
    "scpn_phase_orchestrator.adapters.quantum_control_bridge",
    "scpn_phase_orchestrator.adapters.lsl_bci_bridge",
    "scpn_phase_orchestrator.adapters.gaian_mesh_bridge",
    "scpn_phase_orchestrator.autotune.sindy",
    "scpn_phase_orchestrator.visualization.streamer",
    "scpn_phase_orchestrator.coupling.connectome",
    "scpn_phase_orchestrator.coupling.knm",
    "scpn_phase_orchestrator.oscillators.physical",
    "scpn_phase_orchestrator.upde.prediction",
    "scpn_phase_orchestrator.upde.engine",
    "scpn_phase_orchestrator.upde.pac",
    "scpn_phase_orchestrator.upde.stuart_landau",
    "scpn_phase_orchestrator.upde.order_params",
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["domainpacks", "domainpacks.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "grpc_tools",
    "grpc_tools.*",
    "neurolib",
    "neurolib.*",
    "scipy",
    "scipy.*",
    "spo_kernel",
    "spo_kernel.*",
    "redis",
    "redis.*",
    "opentelemetry",
    "opentelemetry.*",
    "optax",
    "optax.*",
    "osqp",
    "osqp.*",
    "pylsl",
    "pylsl.*",
    "websockets",
    "websockets.*",
    "rtamt",
    "rtamt.*",
    "ripser",
    "ripser.*",
    "sc_neurocore",
    "sc_neurocore.*",
    "scpn_quantum_control",
    "scpn_quantum_control.*",
    "jax",
    "jax.*",
    "asyncua",
    "asyncua.*",
    "yaml",
    "tomli",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# matplotlib and streamlit are optional plot/dev-UI dependencies used only by
# tools/ scripts; treat them as untyped so the scripts type-check with or
# without the stubs installed.
module = ["matplotlib", "matplotlib.*", "streamlit", "streamlit.*", "paho", "paho.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scpn-studio-platform is an optional SDK (the ``studio`` extra) consumed only by
# studio/federation_manifest.py behind a guarded import; it is not in the pinned
# CI dev-lock, so treat it as untyped to type-check with or without it installed.
module = ["scpn_studio_platform", "scpn_studio_platform.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scpn_phase_orchestrator.nn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --benchmark-disable"
xfail_strict = true
filterwarnings = ["error::DeprecationWarning"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end integration tests",
    "contract: boundary-contract verification tests",
    "performance: host-sensitive wall-clock regression checks",
    "slow: long-running stress/scale tests (N>1000 or T>10000)",
]

[tool.coverage.run]
source = ["scpn_phase_orchestrator"]
concurrency = ["thread"]
omit = [
    "*/runtime/grpc_gen/*",
    # External-dependency adapters: require packages not in standard CI
    # (Redis, Modbus, BrainFlow, neurolib, scpn-fusion-core, sc-neurocore,
    # scpn-control, rtamt/Python 3.11 only).
    "*/adapters/hardware_io.py",
    "*/adapters/modbus_tls.py",
    "*/adapters/redis_store.py",
    "*/adapters/prometheus.py",
    "*/adapters/snn_bridge.py",
    "*/adapters/fusion_core_bridge.py",
    "*/adapters/neurocore_bridge.py",
    "*/adapters/plasma_control_bridge.py",
    "*/monitor/stl.py",
]
# Optional native backend shims (``coupling|monitor|upde/_*_{go,julia,mojo}.py``
# plus their ``experimental/accelerators`` implementations) are NOT omitted: the
# public forwarder modules and every implementation's module-level import surface
# run in the standard matrix (see tests/test_backend_module_imports.py) and are
# measured. The Go/Julia/Mojo FFI call bodies execute only with their toolchains
# and built artefacts, which the standard coverage matrix does not provide (the
# Julia lane runs without coverage; Go/Mojo are not built in CI), so those native
# lines surface honestly as uncovered instead of being hidden from the gate.
# Worst case (every shim body uncovered) keeps the project ~84%, well above the
# 60% floor below.

[tool.coverage.report]
# This is a LOCAL soft floor for a quick `pytest --cov` run, not the project
# gate. A single CI lane cannot reach the real coverage because the optional
# backends (Rust, JAX, Mojo, Julia, Go) and extras are absent, so the CI test
# and ffi lanes run with `--cov-fail-under=0` and the AUTHORITATIVE gate is the
# `coverage-guard` job: it combines the test and ffi coverage and enforces the
# per-module thresholds in `tools/coverage_guard_thresholds.json` via
# `tools/coverage_guard.py`. New code targets 100%; raise that file's thresholds,
# not this floor.
fail_under = 60

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404"]
