# SCPN Phase Orchestrator — Rust Kernel
# (C) 1998-2026 Miroslav Sotek. All rights reserved.
# License: GNU AGPL v3 | Commercial licensing available

[workspace]
members = [
    "crates/spo-types",
    "crates/spo-engine",
    "crates/spo-oscillators",
    "crates/spo-supervisor",
    "crates/spo-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Miroslav Sotek <protoscience@anulum.li>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
criterion = { version = "0.5" }

[workspace.lints.clippy]
needless_range_loop = "allow"
field_reassign_with_default = "allow"
unwrap_used = "warn"

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
