# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Phase Orchestrator — Rust Kernel

[workspace]
members = [
    "crates/spo-types",
    "crates/spo-engine",
    "crates/spo-oscillators",
    "crates/spo-supervisor",
    "crates/spo-ffi",
    "crates/spo-wasm",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["Miroslav Sotek <protoscience@anulum.li>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/anulum/scpn-phase-orchestrator"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = { version = "0.28", default-features = false }
criterion = { version = "0.5" }
proptest = "1.5"

[workspace.lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
