# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Phase Orchestrator — SPO FFI Crate

[package]
name = "spo-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SCPN Phase Orchestrator — PyO3 Python bindings"

[lib]
name = "spo_kernel"
crate-type = ["cdylib"]

[dependencies]
spo-types = { path = "../spo-types" }
spo-engine = { path = "../spo-engine" }
spo-oscillators = { path = "../spo-oscillators" }
spo-supervisor = { path = "../spo-supervisor" }
pyo3 = { workspace = true }
numpy = { workspace = true }

[lints]
workspace = true
