[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "spo-kernel"
version = "0.5.0"
description = "SCPN Phase Orchestrator — Rust-accelerated UPDE kernel"
authors = [{name = "Miroslav Sotek", email = "protoscience@anulum.li"}]
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}

[tool.maturin]
features = ["pyo3/extension-module"]
