[package]
name = "spo-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SCPN Phase Orchestrator — regime FSM, policy, coherence monitor, boundaries"

[dependencies]
spo-types = { path = "../spo-types" }
serde = { workspace = true }

[lints]
workspace = true
